<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_team_fragment_toolbar_text">Команда</string>
    <string name="about_team_fragment_header">Над приложением работали</string>
    <string name="about_team_fragment_team_list">Аверкиева Ксения\n\nШипицын Игорь\n\nПадчин Дмитрий\n\nБрусов Денис\n\nКомиссаров Андрей</string>

    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="team">Команда</string>
    <string name="input_hint">Введите запрос</string>
    <string name="searching_vacancies">Поиск вакансий</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_vacancy">Не удалось получить\n список вакансий</string>
    <string name="number_of_founded_vacancies">[найдено 286 вакансий]</string>
    <string name="placeholder_job_title_and_city">Android-разрабочик, Москва</string>
    <string name="placeholder_company">Еда</string>
    <string name="placeholder_salary">От 100000 р</string>

    <string name="details_top_nav_header">Вакансия</string>
    <string name="details_experience_title">Требуемый опыт</string>
    <string name="details_description_title">Описание вакансии</string>
    <string name="details_skills_header">Ключевые навыки</string>
    <string name="details_contacts_header">Контакты</string>
    <string name="details_contacts_name_subtitle">Контактное лицо</string>
    <string name="details_contacts_email_subtitle">E-mail</string>
    <string name="details_contacts_phone_subtitle">Телефон</string>
    <string name="details_contacts_comment_subtitle">Комментарий</string>

    <string name="placeholder_details_title">Android разработчик</string>
    <string name="placeholder_details_salary">от 100 000 руб.</string>
    <string name="placeholder_details_company">Еда</string>
    <string name="placeholder_details_address">Москва</string>
    <string name="placeholder_details_experience">От 1 до 3 лет</string>
    <string name="placeholder_details_conditions">Полная занятость, удаленная работа</string>
    <string name="placeholder_details_description">Условия, обязанности, требования</string>
    <string name="placeholder_details_skills">Знания, умения и т.д.</string>
    <string name="placeholder_details_contacts_name">Ирина</string>
    <string name="placeholder_details_contacts_email">Ирина@mail.ru</string>
    <string name="placeholder_details_contacts_phone">+79119993333</string>
    <string name="placeholder_details_contacts_comment">Заполнить анкету можно на нашем сайте</string>
    <string name="placeholder_details_error_message">Ошибка сервера</string>

    <string name="bad_connection">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="unknown_error">Неизвестная ошибка</string>

    <string name="salary_from">от %s %s</string>
    <string name="salary_to">до %s %s</string>
    <string name="salary_from_to">от %s до %s %s</string>
    <string name="salary_not_specified">Зарплата не указана</string>

    <string name="cant_get_list">Не удалось получить список</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="placeholder_favourite_empty_list">Список пуст</string>
    <string name="select_region">Выбор региона</string>
    <string name="hint_text_select_region">Введите регион</string>

    <string name="setting_of_filter">Настройки фильтрации</string>
    <string name="place_of_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="placeholder_place_of_work">Россия, Москва</string>
    <string name="placeholder_industry">Автошкола</string>
    <string name="write_sum">Введите сумму</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="stop_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>

    <string name="select_country">Выбор страны</string>

    <string name="selection_place_of_work">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="placeholder_country">Россия</string>
    <string name="region">Регион</string>
    <string name="placeholder_region">Москва</string>
    <string name="select">Выбрать</string>
    <string name="industry_tool_bar_header">Выбор отрасли</string>
    <string name="select_industry">Выберите отрасль</string>
    <string name="industries_placeholder_message">Не удается получить список отраслей</string>
    <string name="no_email_toast">На устройстве нет приложения для отправки почты</string>
    <string name="toast_message">Произошла ошибка</string>

    <string name="no_such_vacancy">Таких вакансий нет</string>
</resources>
