<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contact_phone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_contacts_phone_subtitle"
            android:layout_marginTop="@dimen/details_description_margin_top"
            style="@style/DetailsSubtitleSmall"/>

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_details_contacts_phone"
            android:layout_marginTop="@dimen/details_between_lines_margin_top"
            style="@style/DetailsLinkedRegularText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/details_description_margin_top"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_contacts_comment_subtitle"
            style="@style/DetailsSubtitleSmall"/>

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_details_contacts_comment"
            android:layout_marginTop="@dimen/details_between_lines_margin_top"
            style="@style/DetailsRegularText"/>

    </LinearLayout>
</LinearLayout>

