<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.fragment.VacancyDescriptionFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/details_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/details_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:id="@+id/topNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_navigation_bar_height"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:padding="@dimen/top_navigation_bar_icon_padding"
            android:layout_marginHorizontal="@dimen/details_backButton_marginHorizontal"/>
        <TextView
            android:id="@+id/tv_vacancy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TopNavigationHeader"
            android:text="@string/details_top_nav_header"/>
        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sharing"
            android:padding="@dimen/top_navigation_bar_icon_padding"
            android:layout_marginHorizontal="@dimen/details_shareButton_marginHorizontal"/>
        <ImageView
            android:id="@+id/favouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourites_off"
            android:padding="@dimen/top_navigation_bar_icon_padding"
            android:layout_marginEnd="@dimen/details_favouriteButton_marginEnd"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/vacancy_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_vacancy_container_margin_top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/details_description_padding_bottom"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/topNavigationBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/DetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_title_margin_top"
                tools:text="@string/placeholder_details_title" />

            <TextView
                android:id="@+id/salary"
                style="@style/DetailsSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/details_between_lines_margin_top"
                tools:text="@string/placeholder_details_salary" />

            <LinearLayout
                android:id="@+id/employer_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_marginTop="@dimen/details_employer_card_marginTop"
                android:background="@drawable/card_vacancy_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/employer_logo"
                    android:layout_width="@dimen/card_image_size"
                    android:layout_height="@dimen/card_image_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/card_margin_horizontal"
                    android:src="@drawable/placeholder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/card_padding_top">

                    <TextView
                        android:id="@+id/employer_name"
                        style="@style/CardTextViewStyleTop"
                        android:textColor="@color/black"
                        tools:text="@string/placeholder_details_company" />

                    <TextView
                        android:id="@+id/employer_address"
                        style="@style/CardTextViewStyleBottom"
                        android:textColor="@color/black"
                        tools:text="@string/placeholder_details_address" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/DetailsSubtitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_experience_container_marginTop"
                android:text="@string/details_experience_title" />

            <TextView
                android:id="@+id/experience"
                style="@style/DetailsRegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_between_lines_margin_top"
                tools:text="@string/placeholder_details_experience" />

            <TextView
                android:id="@+id/conditions"
                style="@style/DetailsRegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_conditions_marginTop"
                tools:text="@string/placeholder_details_conditions" />

            <TextView
                style="@style/DetailsSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_description_container_marginTop"
                android:text="@string/details_description_title" />

            <TextView
                android:id="@+id/description"
                style="@style/DetailsRegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_description_margin_top"
                android:layout_marginBottom="@dimen/details_description_padding_bottom"
                tools:text="@string/placeholder_details_description" />

            <LinearLayout
                android:id="@+id/key_skills_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/details_description_padding_bottom"
                android:visibility="gone">

                <TextView
                    style="@style/DetailsSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_skills_header" />

                <TextView
                    android:id="@+id/key_skills"
                    style="@style/DetailsRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_description_margin_top"
                    tools:text="@string/placeholder_details_skills" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contacts_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/details_description_padding_bottom"
                android:visibility="gone">

                <TextView
                    style="@style/DetailsSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_contacts_header" />

                <LinearLayout
                    android:id="@+id/contact_name_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DetailsSubtitleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/details_description_margin_top"
                        android:text="@string/details_contacts_name_subtitle" />

                    <TextView
                        android:id="@+id/contact_name"
                        style="@style/DetailsRegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/details_between_lines_margin_top"
                        tools:text="@string/placeholder_details_contacts_name" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact_email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/DetailsSubtitleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/details_description_margin_top"
                        android:text="@string/details_contacts_email_subtitle" />

                    <TextView
                        android:id="@+id/contact_email"
                        style="@style/DetailsLinkedRegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/details_between_lines_margin_top"
                        tools:text="@string/placeholder_details_contacts_email" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rw_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/card_contact_phone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/details_progressBar_size"
        android:layout_height="@dimen/details_progressBar_size"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"

        app:layout_constraintTop_toBottomOf="@id/topNavigationBar"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/topNavigationBar"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/details_error_image_height"
            android:src="@drawable/placeholder_details_server_error"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/placeholder_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_details_error_message"
            style="@style/DetailsPlaceholderMessage"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
