<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_white"
    android:orientation="vertical"
    tools:context=".ui.team.fragment.AboutTeamFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_team_fragment_toolbar_height"
        android:title="@string/about_team_fragment_toolbar_text"
        android:titleTextAppearance="@style/YsDisplayMedium.Large"
        android:titleTextColor="@color/white_black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/about_team_fragment_side_margin"
        android:layout_marginTop="@dimen/about_team_fragment_vertical_margin_medium"
        android:layout_marginEnd="@dimen/about_team_fragment_side_margin"
        android:text="@string/about_team_fragment_header"
        android:textAppearance="@style/YsDisplayBold"
        android:textColor="@color/white_black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/about_team_fragment_side_margin"
        android:layout_marginTop="@dimen/about_team_fragment_vertical_margin_large"
        android:layout_marginEnd="@dimen/about_team_fragment_side_margin"
        android:text="@string/about_team_fragment_team_list"
        android:textAppearance="@style/YsDisplayMedium.Medium"
        android:textColor="@color/white_black" />

</LinearLayout>
