<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    android:orientation="vertical"
    tools:context=".ui.team.fragment.TeamFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_team_fragment_toolbar_height"
        app:title="@string/about_team_fragment_toolbar_text"
        app:titleTextAppearance="@style/YsDisplayMedium.Large"
        app:titleTextColor="@color/black_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/about_team_fragment_side_margin"
        android:layout_marginTop="@dimen/about_team_fragment_vertical_margin_medium"
        android:layout_marginEnd="@dimen/about_team_fragment_side_margin"
        android:text="@string/about_team_fragment_header"
        android:textAppearance="@style/YsDisplayBold"
        android:textColor="@color/black_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/about_team_fragment_side_margin"
        android:layout_marginTop="@dimen/about_team_fragment_vertical_margin_large"
        android:layout_marginEnd="@dimen/about_team_fragment_side_margin"
        android:text="@string/about_team_fragment_team_list"
        android:textAppearance="@style/YsDisplayMedium.Medium"
        android:textColor="@color/black_white" />

</LinearLayout>
